change color from yellow to cyan

--- a/style.css
+++ b/style.css
@@ -8,21 +8,21 @@ img{
 }
 
 #div1{
-    background-color:  #ffd800;
+    background-color:  cyan;
     width:300px;
     margin-right: 20px;
     margin-left: 45px;
     height:500px
 }
 #div2{
-    background-color:  #ffd800;
+    background-color:  cyan;
     width:300px;
     margin-right: 20px;
     margin-left: 45px;
     height:500px
 }
 #div3{
-    background-color:  #ffd800;
+    background-color:  cyan;
     width:300px;
     margin-right: 20px;
     margin-left: 45px;
